# batteries

./: .clang-format  .gitignore  .gitlab-ci.yml  Makefile  README.md  batt.py  ci-docker-image.sh  coding_style.md  common.sh  conan-config-flags.sh  conan-login.sh  conan-targets.mk  conan-version.sh  conanfile.py  deploy-docs.sh  doc-targets.mk  docutil.jq  gen-version-nav-js.sh  generate-vscode-config.sh  get-release.sh  get-version.sh  howto-build-docs.md  init-gitlab-runner-cache.sh  publish-release.sh  push-scripts.sh  run-with-docker.sh  self-check.sh  show-deps.sh  show-latest.sh  upgrade-deps.sh  upgrade-script.sh
src/: CMakeLists.txt  batteries.hpp  hello.cpp
src/batteries/: assert.hpp  assert_test.cpp  bounds.hpp  buffer.hpp  buffer.test.cpp  case_of.hpp  case_of_test.cpp  checked_cast.hpp  checked_cast_test.cpp  config.hpp  constants.hpp  cpu_align.hpp  cpu_align_test.cpp  do_nothing.hpp  env.hpp  finally.hpp  finally_test.cpp  hash.hpp  hint.hpp  http_client.hpp  http_client.test.cpp  http_client_impl.hpp  int_types.hpp  interval.hpp  interval.test.cpp  interval_traits.hpp  logging.hpp  math.hpp  math.test.cpp  nullable.hpp  nullable_test.cpp  optional.hpp  optional.test.cpp  pointers.hpp  radix_queue.hpp  radix_queue_test.cpp  ref.hpp  require.hpp  require.test.cpp  segv.hpp  (+44 more)
src/batteries/algo/: parallel_accumulate.hpp  parallel_accumulate.test.cpp  parallel_copy.hpp  parallel_copy.test.cpp  parallel_merge.hpp  parallel_merge.test.cpp  parallel_running_total.hpp  parallel_running_total.test.cpp  parallel_transform.hpp  parallel_transform.test.cpp  running_total.hpp
src/batteries/async/: backoff.hpp  backoff.test.cpp  buffer_source.hpp  buffer_source.test.cpp  buffer_source_impl.hpp  channel.hpp  channel.test.cpp  continuation.hpp  continuation.test.cpp  debug_info.hpp  debug_info.test.cpp  debug_info_decl.hpp  debug_info_impl.hpp  dump_tasks.hpp  fake_execution_context.hpp  fake_execution_context_decl.hpp  fake_execution_context_impl.hpp  fake_executor.hpp  fake_executor.test.cpp  fake_executor_decl.hpp  fake_executor_impl.hpp  fake_executor_impl.ipp  fake_task_scheduler.hpp  fake_time_service.hpp  fake_time_service.test.cpp  fake_time_service_decl.hpp  fake_time_service_impl.hpp  fetch.hpp  fetch.test.cpp  future.hpp  future_decl.hpp  future_impl.hpp  grant.hpp  grant.test.cpp  grant_decl.hpp  grant_impl.hpp  handler.hpp  handler.test.cpp  io_result.hpp  latch.hpp  (+35 more)
src/batteries/http/: client.hpp  client_impl.hpp  header.hpp  host_address.hpp  http_chunk_decoder.hpp  http_chunk_encoder.hpp  http_client.hpp  http_client.test.cpp  http_client_connection.hpp  http_client_connection_decl.hpp  http_client_connection_impl.hpp  http_client_host_context.hpp  http_client_host_context_decl.hpp  http_client_host_context_impl.hpp  http_client_impl.hpp  http_data.hpp  http_data.test.cpp  http_header.hpp  http_message_base.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_server_impl.hpp  http_version.hpp
src/batteries/metrics/: metric_collectors.hpp  metric_csv_formatter.hpp  metric_csv_formatter_impl.hpp  metric_dumper.hpp  metric_dumper_impl.hpp  metric_formatter.hpp  metric_formatter_impl.hpp  metric_registry.hpp  metric_registry_impl.hpp  metrics.test.cpp
src/batteries/pico_http/: README.md  parser.hpp  parser.test.cpp  parser_decl.hpp  parser_impl.hpp
src/batteries/protobuf/: stream_buffer_input_stream.hpp  stream_buffer_output_stream.hpp
src/batteries/seq/: addition.hpp  all_true.hpp  any_true.hpp  apply.hpp  apply.test.cpp  attach.hpp  boxed.hpp  boxed.test.cpp  cache_next.hpp  chain.hpp  collect.hpp  collect_vec.hpp  consume.hpp  count.hpp  decay.hpp  deref.hpp  emplace_back.hpp  empty.hpp  filter.hpp  filter_map.hpp  first.hpp  flatten.hpp  for_each.hpp  fuse.hpp  group_by.hpp  inner_reduce.hpp  inspect.hpp  inspect_adjacent.hpp  is_sorted.hpp  kmerge.hpp  last.hpp  lazy.hpp  loop_control.hpp  map.hpp  map_adjacent.hpp  map_fold.hpp  map_pairwise.hpp  merge_by.hpp  natural_equals.hpp  natural_order.hpp  (+17 more)
src/batteries/state_machine_model/: advanced_options.hpp  entropy_source.hpp  exhaustive_model_checker.hpp  parallel_model_check_state.hpp  verbose.hpp  (+3 more)
(+86 files in other folders)
